# kedro-parallel-partitioned-bug

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml
src/kedro_parallel_partitioned_bug/: __init__.py  __main__.py  pipeline_registry.py  settings.py
