[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_parallel_partitioned_bug"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-parallel-partitioned-bug = "kedro_parallel_partitioned_bug.__main__:main"

[tool.kedro]
package_name = "kedro_parallel_partitioned_bug"
project_name = "kedro-parallel-partitioned-bug"
kedro_init_version = "0.19.3"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedro_parallel_partitioned_bug.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
